# Obscure-Protocol

./: .gitignore  README.md
app/: globals.css  layout.tsx  page.tsx
components/: behind-cloak-section.tsx  coupon-showcase-section.tsx  final-cta-section.tsx  theme-toggle.tsx
smart-contract/: .gitignore  Anchor.toml  package-lock.json  package.json  pda.ts
smart-contract/programs/sol1/: Cargo.toml
smart-contract/programs/sol1/src/: lib.rs
smart-contract/tests/: withdraw_test.ts
website/landing/: package-lock.json  package.json  tailwind.config.ts
website/landing/app/: layout.tsx
website/landing/components/: blockchain-coupon-section.tsx  community-section.tsx  coupon-showcase-section.tsx  features-section.tsx  final-cta-section.tsx  hero-section.tsx  navbar.tsx  use-cases-section.tsx  what-is-section.tsx  why-privacy-section.tsx
website/landing/public/: zk.avif
website/phone test whisper (beta)/: phone test whisper (beta).txt
website/servers/: index.ts  package.json  server.txt  tsconfig.json
website/whisper-tx/: 01.txt  deposit.ts  package-lock.json  package.json
website/whisper-tx/app/: globals.css  layout.tsx  page.tsx
website/whisper-tx/components/: ClaimModal.tsx  coupon-modal.tsx  deposit-modal.tsx  faq-accordion.tsx  footer.tsx  header.tsx  home-cards.tsx  learn-section.tsx  mode-toggle.tsx  saved-coupons.tsx  security-section.tsx  summon-ghost-button.tsx  wallet-connect.tsx  withdraw-modal.tsx
website/whisper-tx/scripts/: deposit.ts  refund.ts  withdraw.ts
website/whisper-tx/styles/: deposit.ts
