[package]
name = "sol1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol1"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
init-if-needed = []  # Enable the init-if-needed feature for Anchor

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }  # Include the feature here
solana-program = "1.13.5"
sha2 = "0.10.8"
bs58 = "0.5.0"

